--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -65,6 +65,6 @@
         android:layout_margin="8dp"
         android:padding="8dp"
         android:scrollbars="vertical"
-        android:text="Snap a card"
+        android:text="@string/appName"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 </LinearLayout>
