--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -51,6 +51,14 @@
     <View android:id="@+id/snack_anchor"
         android:layout_width="1dp"
         android:layout_height="1dp"
+        android:background="@null"
         android:layout_gravity="fill_vertical|center_horizontal"/>
 
+    <ProgressBar android:id="@+id/start_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/accent"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
 </LinearLayout>
