--- a/app/src/main/res/drawable/btn_background.xml
+++ b/app/src/main/res/drawable/btn_background.xml
@@ -2,14 +2,14 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@color/bg_accent">
     <item android:id="@android:id/mask">
-        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+        <shape
             android:shape="rectangle">
             <corners android:radius="4dp"/>
             <solid android:color="@color/btn_bg_color"/>
         </shape>
     </item>
     <item>
-        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+        <shape
             android:shape="rectangle">
             <corners android:radius="4dp"/>
             <stroke android:width="1dp" android:color="@color/primary" />
