--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -3,5 +3,6 @@
     android:id="@+id/labelText"
     android:layout_width="wrap_content"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:padding="12dp"
+    android:padding="4dp"
+    android:drawablePadding="18dp"
     style="?android:attr/dropDownItemStyle" />
